--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	// https://mvnrepository.com/artifact/commons-codec/commons-codec
+implementation 'commons-codec:commons-codec:1.15'
+	
 }
 
 tasks.named('test') {
